--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-mongoose": "^3.1.1",
+    "egg-scripts": "^2.5.0",
+    "puppeteer": "^1.11.0",
+    "puppeteer-core": "^1.11.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
