--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-cors": "^2.1.2",
     "egg-mongoose": "^3.1.1",
     "egg-scripts": "^2.5.0",
     "mongodb": "^2.2.33",
