--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "egg": "^2.2.1",
     "egg-cors": "^2.1.2",
     "egg-mongoose": "^3.1.1",
+    "egg-origin": "^1.0.3",
+    "egg-passport": "^2.0.1",
     "egg-scripts": "^2.5.0",
     "mongodb": "^2.2.33",
     "mongoose": "^5.0.0",
